WASM 프로젝트 생성 로컬스토리지, AuthorizeProvider 등록

--- a/AutoTrading.Client/Pages/Home.razor
+++ b/AutoTrading.Client/Pages/Home.razor
@@ -1,7 +1,5 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>Auto Trading</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+<h1>안뇽</h1>
