--- a/AutoTrading.Client/Layout/MainLayout.razor
+++ b/AutoTrading.Client/Layout/MainLayout.razor
@@ -1,16 +1,21 @@
 ﻿@inherits LayoutComponentBase
+
 <div class="page">
-    <div class="sidebar">
-        <NavMenu/>
-    </div>
 
     <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+        <div class="top-row px-2">
+            <HomeButton/>
+        </div>
+        <div class="nav-menu">
+            <NavMenu/>
         </div>
 
-        <article class="content px-4">
+        <article class="content px-2">
             @Body
         </article>
     </main>
 </div>
+
+<MudThemeProvider/>
+<MudDialogProvider/>
+<MudSnackbarProvider/>
