--- a/AutoTrading.Client/Layout/MainLayout.razor.css
+++ b/AutoTrading.Client/Layout/MainLayout.razor.css
@@ -8,8 +8,8 @@ main {
     flex: 1;
 }
 
-.sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+.nav-menu {
+    background-image: linear-gradient(180deg, rgb(44, 62, 80), rgb(52, 73, 94) 70%);
 }
 
 .top-row {
