--- a/AutoTrading.Client/_Imports.razor
+++ b/AutoTrading.Client/_Imports.razor
@@ -8,3 +8,7 @@
 @using Microsoft.JSInterop
 @using AutoTrading.Client
 @using AutoTrading.Client.Layout
+@using Blazored.LocalStorage
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
+@using MudBlazor
