--- a/AutoTrading.Client/Layout/AutoTradingNavMenu.razor
+++ b/AutoTrading.Client/Layout/AutoTradingNavMenu.razor
@@ -13,16 +13,10 @@
                 Home
             </NavLink>
         </div>
-        @* @if (CategoryService is { Categories: not null }) *@
-        @* { *@
-            @foreach (var category in CategoryService)
-            {
-                <div class="nav-item px-2">
-                    <NavLink class="nav-link" href="@category">
-                        @category
-                    </NavLink>
-                </div>
-            }
-        @*}*@
+        <div class="nav-item px-2">
+            <NavLink class="nav-link" href="/account/list">
+                계좌
+            </NavLink>
+        </div>
     </nav>
 </div>
