--- a/AutoTrading.Client/Layout/MainLayout.razor
+++ b/AutoTrading.Client/Layout/MainLayout.razor
@@ -7,7 +7,7 @@
             <HomeButton/>
         </div>
         <div class="nav-menu">
-            <NavMenu/>
+            <AutoTradingNavMenu/>
         </div>
 
         <article class="content px-2">
