--- a/AutoTrading.Client/_Imports.razor
+++ b/AutoTrading.Client/_Imports.razor
@@ -11,4 +11,11 @@
 @using Blazored.LocalStorage
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Authorization
+@using AutoTrading.Client.Shared
+@using AutoTrading.Client.Services.Account
+@using AutoTrading.Client.Services.AccountDetail
+@using AutoTrading.Client.Services.Auth
+@using AutoTrading.Client.Services.Promotion
+@using AutoTrading.Client.Services.Stock
 @using MudBlazor
+
